feat(asset): platformize uploads and reset schemas
